--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
   },
   "dependencies": {
     "next": "9.5.5",
+    "polished": "^4.0.3",
     "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "react-dom": "16.14.0",
+    "styled-components": "^5.2.0",
+    "styled-normalize": "^8.0.7"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.10",
+    "@types/react": "^16.9.53",
+    "@types/styled-components": "^5.1.4",
+    "babel-plugin-styled-components": "^1.11.1",
+    "typescript": "^4.0.3"
   }
 }
