--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "9.5.5",
+    "nodemailer": "^6.4.14",
     "polished": "^4.0.3",
     "react": "16.14.0",
     "react-dom": "16.14.0",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.11.10",
+    "@types/nodemailer": "^6.4.0",
     "@types/react": "^16.9.53",
     "@types/styled-components": "^5.1.4",
     "babel-plugin-styled-components": "^1.11.1",
