--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "contentful": "^7.14.8",
     "next": "9.5.5",
     "nodemailer": "^6.4.14",
     "polished": "^4.0.3",
