--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "contentful": "^7.14.8",
     "next": "9.5.5",
+    "next-seo": "^4.17.0",
     "nodemailer": "^6.4.14",
     "polished": "^4.0.3",
     "react": "16.14.0",
