new email stuff

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "contentful": "^7.14.8",
     "next": "10.0.0",
     "next-seo": "^4.17.0",
